force-app/main/default/objects/Token_Setting__c/Token_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Inwise Token Setting</label>
</CustomObject>