force-app/main/default/objects/Token_Setting__c/fields/Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Id__c</fullName>
    <label>Inwise Account Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>