force-app/main/default/objects/Token_Setting__c/fields/Encryption_Key__c.field-meta.xml
<CustomField>
    <fullName>Encryption_Key__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Encryption Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>